--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port=3003",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port=3003",
     "lint": "next lint"
   },
   "dependencies": {
+    "copy-to-clipboard": "^3.3.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
